231126 properties 업데이트 및 불필요한 파일 제거

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,27 +24,8 @@ spring.thymeleaf.check-template-location=true
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
-# Mail Sender
-spring.mail.host=smtp.naver.com
-spring.mail.port=465
-spring.mail.username=
-spring.mail.password=
-spring.mail.default-encoding=UTF-8
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.ssl.enable=true
-spring.mail.properties.mail.smtp.ssl.trust=smtp.naver.com
-
-# CCTV API Service Key
-cctv.api.key=5592d8862e5446ebbf60f7fb03b2e1ac
-cctvResult.api.key=d7aefba8788e4981a4166ebd3d5b8d89
-
 # BHG API Key ( bhg ) / API URL / dataType
 bhg.api.key=tfzAvw3TQ6a8wL8N0-OmBw
-#bhg.api.Url=https://apihub.kma.go.kr/api/typ09/url/eqk/urlNewNotiEqk.do
-#bhg.api.Type=XML
 
-# Naver Login
-naver.client_id=EjjCKVYZ02W5tA0_JBpE
-naver.client_secret=5YEbhqWvUK
-naver.redirect_uri=http://localhost:11000/auth/naver/callback
+# data.go.kr API Service Key ( DisasterMsg, EarthquakeLive )
+data.api.key=NiMC9MGQZ6y5WdBECwJNOyDr3w4XMoRUorMyLufi0z%2FZbFf%2BcV%2FCt4gl8GkEwfzwz1aAuvWOyPAgszEPtZjLcA%3D%3D
